feat(racingcar.RacingCarGameMachine) : 게임 초기 설정 검증 로직 추가